--- a/src/app/admin/features/operator_Login/Dialog/lcologin-report/lcologin-report.component.scss
+++ b/src/app/admin/features/operator_Login/Dialog/lcologin-report/lcologin-report.component.scss
@@ -1,16 +1,36 @@
 .display1 {
     display: flex;
 }
-.display{
+
+.display {
     display: flex;
 }
+
 @media screen and (max-width:300px) {
-    .display{
+    .display {
         display: block;
     }
 }
+
 @media screen and (max-width:560px) {
-    .display{
+    .display {
         display: block;
     }
+}
+
+.select2-container {
+    width: 250px !important;
+}
+
+.select2-container .select2-selection--single {
+    height: 45px !important;
+    margin-top: 1%;
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+    margin-top: 7px;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    top: 10px;
 }
