--- a/src/app/admin/features/Service_center_role/Dialog/servicecenter-edit/servicecenter-edit.component.html
+++ b/src/app/admin/features/Service_center_role/Dialog/servicecenter-edit/servicecenter-edit.component.html
@@ -1,57 +1,123 @@
-<div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
-    <h6>UPDATE FAULTY BOX</h6>
-    <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
-</div>
-<div class="col d-flex justify-content-center align-items-center card transparent-background">
-    <div class="card-content">
-        <div class="card-body col-12 col-md-12 mobile">
-            <div class="input_box col-12 col-md-12 display mb-3">
-                <div class="col-12 col-md-4 ">
-                    <span for="categoryName" class="me-2">Entry </span>
+<div *ngIf="type=='1'">
+    <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+        <h6>Dispatch</h6>
+        <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+    </div>
+    <div class="col d-flex justify-content-center align-items-center card transparent-background">
+        <div class="card-content">
+            <div class="card-body col-12 col-md-12 mobile">
+                <div class="input_box col-12 col-md-12 display mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="categoryName" class="me-2">Entry </span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <select id="issue" [(ngModel)]="entry">
+                            <option *ngFor="let entry of filteredProblemList" [value]="entry.id"> {{ entry.name }}
+                            </option>
+                        </select>
+                    </div>
                 </div>
-                <div class="col-12 col-md-8">
-                    <select id="issue" [(ngModel)]="entry" 
-                       >
-                        <option *ngFor="let entry of filteredProblemList" [value]="entry.id"> {{ entry.name }} </option>
-                    </select>
+                <!-- <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="channelLogo" class="me-2"> Close</span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <input type="text" [(ngModel)]="dispatch" class=" flex-grow-1" placeholder="Enter Dispatch"
+                            [disabled]=" msoid ==1" [ngStyle]="{ 'border-color':  msoid ==1 ? '#e9e3e3':'gray' }">
+                    </div>
+                </div> -->
+                <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="channelLogo" class="me-2">Dispatch </span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <input type="text" [(ngModel)]="delivery" class=" flex-grow-1" placeholder="Enter Delivery"
+                            [disabled]=" msoid == 1 || msoid == 2"
+                            [ngStyle]="{ 'border-color': msoid == 1 || msoid == 2 ? '#e9e3e3':'gray' }">
+                    </div>
                 </div>
-            </div>
-            <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
-                <div class="col-12 col-md-4 ">
-                    <span for="channelLogo" class="me-2"> Close</span>
-                </div>
-                <div class="col-12 col-md-8">
-                    <input type="text" [(ngModel)]="dispatch" class=" flex-grow-1" placeholder="Enter Dispatch"
-                        [disabled]=" msoid ==1"
-                        [ngStyle]="{ 'border-color':  msoid ==1 ? '#e9e3e3':'gray' }">
-                </div>
-            </div>
-            <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
-                <div class="col-12 col-md-4 ">
-                    <span for="channelLogo" class="me-2">Dispatch </span>
-                </div>
-                <div class="col-12 col-md-8">
-                    <input type="text" [(ngModel)]="delivery" class=" flex-grow-1" placeholder="Enter Delivery"
-                        [disabled]=" msoid == 1 || msoid == 2" [ngStyle]="{ 'border-color': msoid == 1 || msoid == 2 ? '#e9e3e3':'gray' }">
-                </div>
-            </div>
-            <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
-                <div class="col-12 col-md-4 ">
-                    <span for="channelLogo" class="me-2">Amount</span>
-                </div>
-                <div class="col-12 col-md-8">
-                    <input type="text" [(ngModel)]="amount" class=" flex-grow-1" placeholder="Enter Amount" (keypress)="onKeydown($event)"
-                        [disabled]="msoid == 1" [ngStyle]="{ 'border-color': msoid == 1 ? '#e9e3e3':'gray' }">
-                </div>
-            </div>
+                <!-- <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="channelLogo" class="me-2">Amount</span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <input type="text" [(ngModel)]="amount" class=" flex-grow-1" placeholder="Enter Amount"
+                            (keypress)="onKeydown($event)" [disabled]="msoid == 1"
+                            [ngStyle]="{ 'border-color': msoid == 1 ? '#e9e3e3':'gray' }">
+                    </div>
+                </div> -->
 
+            </div>
+            <div class="text-center">
+                <div class="input_box d-flex justify-content-center align-items-center">
+                    <button type="button" class="btn btn-success mx-3" (click)="onSubmit()"
+                        style="color: white;">Update</button>
+                    <button type="button" class="btn btn-danger" (click)="onNoClick()"
+                        style="color: white;">cancel</button>
+
+                </div>
+            </div>
         </div>
-        <div class="text-center">
-            <div class="input_box d-flex justify-content-center align-items-center">
-                <button type="button" class="btn btn-success mx-3" (click)="onSubmit()"
-                    style="color: white;">Update</button>
-                <button type="button" class="btn btn-danger" (click)="onNoClick()" style="color: white;">cancel</button>
+    </div>
+</div>
+<div *ngIf="type=='2'">
+    <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
+        <h6>UPDATE FAULTY BOX</h6>
+        <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
+    </div>
+    <div class="col d-flex justify-content-center align-items-center card transparent-background">
+        <div class="card-content">
+            <div class="card-body col-12 col-md-12 mobile">
+                <div class="input_box col-12 col-md-12 display mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="categoryName" class="me-2">Entry </span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <select id="issue" [(ngModel)]="entry">
+                            <option *ngFor="let entry of filteredProblemList" [value]="entry.id"> {{ entry.name }}
+                            </option>
+                        </select>
+                    </div>
+                </div>
+                <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="channelLogo" class="me-2"> Close</span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <input type="text" [(ngModel)]="dispatch" class=" flex-grow-1" placeholder="Enter Dispatch"
+                            [disabled]=" msoid ==1" [ngStyle]="{ 'border-color':  msoid ==1 ? '#e9e3e3':'gray' }">
+                    </div>
+                </div>
+                <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="channelLogo" class="me-2">Dispatch </span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <input type="text" [(ngModel)]="delivery" class=" flex-grow-1" placeholder="Enter Delivery"
+                            [disabled]=" msoid == 1 || msoid == 2"
+                            [ngStyle]="{ 'border-color': msoid == 1 || msoid == 2 ? '#e9e3e3':'gray' }">
+                    </div>
+                </div>
+                <div class="input_box  col-12 col-md-12  display align-items-center mb-3">
+                    <div class="col-12 col-md-4 ">
+                        <span for="channelLogo" class="me-2">Amount</span>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <input type="text" [(ngModel)]="amount" class=" flex-grow-1" placeholder="Enter Amount"
+                            (keypress)="onKeydown($event)" [disabled]="msoid == 1"
+                            [ngStyle]="{ 'border-color': msoid == 1 ? '#e9e3e3':'gray' }">
+                    </div>
+                </div>
 
+            </div>
+            <div class="text-center">
+                <div class="input_box d-flex justify-content-center align-items-center">
+                    <button type="button" class="btn btn-success mx-3" (click)="onSubmit()"
+                        style="color: white;">Update</button>
+                    <button type="button" class="btn btn-danger" (click)="onNoClick()"
+                        style="color: white;">cancel</button>
+
+                </div>
             </div>
         </div>
     </div>
