--- a/src/app/admin/features/special_role/Dialogue/sidenavpermission/sidenavpermission.component.html
+++ b/src/app/admin/features/special_role/Dialogue/sidenavpermission/sidenavpermission.component.html
@@ -1,5 +1,5 @@
 <div class="Head d-flex justify-content-between align-items-center mb-3" style="padding: 1rem;">
-    <h6>SIDENAV LIST</h6>
+    <h6>PERMISSION LIST</h6>
     <i class="fa fa-close close-icon" style="cursor: pointer;" (click)="onNoClick()"></i>
 </div>
 
