--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -182,7 +182,7 @@
                 <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_Dialog(6)">
                     <div class="d-flex justify-content-between w-100">
                         <i class='bx bx-clipboard'></i>
-                        <span class="fw-bold">{{lcoDeatails?.boxinhand}}</span>
+                        <span class="fw-bold">{{operatorDetailsCount?.notallocated}}</span>
                     </div>
                     <div class="mt-2 mb-2 text-center text">Inventory</div>
                 </div>
