--- a/src/app/_core/charts/inventory-chart/inventory-chart.component.scss
+++ b/src/app/_core/charts/inventory-chart/inventory-chart.component.scss
@@ -135,7 +135,7 @@
 
     .description {
       font-size: 12px;
-      color: #ffffff;
+      color: #ffffff !important;
       text-align: center;
     }
   }
