--- a/src/app/_core/charts/bobbulechart/bobbulechart.component.scss
+++ b/src/app/_core/charts/bobbulechart/bobbulechart.component.scss
@@ -58,7 +58,7 @@
 }
 
 .legend {
-  // flex: 1;
+  flex: 1;
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -82,27 +82,3 @@
 }
 
 
-
-.tooltip {
-  visibility: hidden;
-  opacity: 0;
-  width: max-content;
-  white-space: nowrap;
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 4px 8px;
-  border-radius: 6px;
-  position: absolute;
-  bottom: 110%;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 12px;
-  z-index: 10;
-  transition: opacity 0.3s ease;
-}
-
-.bubble:hover .tooltip {
-  visibility: visible;
-  opacity: 1;
-}
