--- a/src/app/admin/features/operator_Login/Dialog/lcologin-report/lcologin-report.component.html
+++ b/src/app/admin/features/operator_Login/Dialog/lcologin-report/lcologin-report.component.html
@@ -126,12 +126,12 @@
             <div class="col-12 col-md-6  mb-3 display1">
                 <div class="export-icon mx-2">
                     <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px"
-                        (click)="getSubscriberBillDownload( 2)">
+                        (click)="getAreawiseDownload( 2)">
                     <div class="tooltip">Excel</div>
                 </div>
                 <div class="export-icon">
                     <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px"
-                        (click)="getSubscriberBillDownload( 1)">
+                        (click)="getAreawiseDownload( 1)">
                     <div class="tooltip">Pdf</div>
                 </div>
             </div>
